Bug 413478 - Dolphin should not try to enter invalid gzip archive.
Summary: Dolphin should not try to enter invalid gzip archive.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-10-26 14:11 UTC by Kishore Gopalakrishnan
Modified: 2020-10-05 20:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.11.80
Sentry Crash Report:


Attachments
Screenshot showing the issue (28.71 KB, image/png)
2019-10-26 14:11 UTC, Kishore Gopalakrishnan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kishore Gopalakrishnan 2019-10-26 14:11:41 UTC
Created attachment 123494 [details]
Screenshot showing the issue

SUMMARY
If we try to browse an invalid gzip archive by opening it in Dolphin, Dolphin correctly complains about 'invalid protocol', but then it actually updates the location in the location bar to show that we are inside the archive (see attached screenshot), while still showing the contents of the parent folder.

STEPS TO REPRODUCE
1. Create an invalid gzip archive (run the command `touch text.gzip`)
2. Open this archive by single/double-clicking it (depends on your settings)

OBSERVED RESULT
Note that while the location in the location bar tells us we are inside the archive (/home/kishore/Downloads/test.gz), the main pane just shows the contents of the parent folder (/home/kishore/Downloads).

EXPECTED RESULT
When we click on an invalid archive which is detected as such by Dolphin, Dolphin should not actually enter it.

SOFTWARE/OS VERSIONS
Linux distro: Arch Linux
KDE Plasma Version: 5.17.0
KDE Frameworks Version: 5.63
Qt Version: 5.13.1

ADDITIONAL INFORMATION
'Back' and 'Up' items in the 'Go' menu also do not work properly once Dolphin enters such an archive.
Comment 1 Bug Janitor Service 2020-10-03 13:22:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/69
Comment 2 Elvis Angelaccio 2020-10-05 20:12:18 UTC
Git commit daa0fc341d8873f8b88400684642f59e6e3ef956 by Elvis Angelaccio, on behalf of Jan Paul Batrina.
Committed on 05/10/2020 at 20:11.
Pushed by elvisangelaccio into branch 'master'.

When an invalid protocol is used, reset the navigator location to the previous url

M  +1    -0    src/dolphinviewcontainer.cpp

https://invent.kde.org/system/dolphin/commit/daa0fc341d8873f8b88400684642f59e6e3ef956