When an invalid protocol is used, reset the navigator location to the previous url

BUG: 413478